--- a/partials/guest-screen.html
+++ b/partials/guest-screen.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-8 col-centered">
+    <div class="col-md-6 col-md-offset-3">
         <div class="panel-success">
             <div class="panel-heading">Вход във системата</div>
             <div class="panel-body">
@@ -13,7 +13,7 @@
                         <input type="text" class="form-control" id="password" ng-model="loginData.password" required>
                     </div>
                     <div class="form-group">
-                        <input type="button" class="form-control btn btn-primary" ng-click="login">
+                        <input type="button" class="form-control btn btn-primary" ng-click="login()" value="Вход">
                     </div>
                 </form>
             </div>
