--- a/partials/guest-screen.html
+++ b/partials/guest-screen.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Парола:</label>
-                        <input type="text" class="form-control" id="password" ng-model="loginData.password" required>
+                        <input type="password" class="form-control" id="password" ng-model="loginData.password" required>
                     </div>
                     <div class="form-group">
                         <input type="button" class="form-control btn btn-primary" ng-click="login()" value="Вход">
