--- a/partials/user-screen.html
+++ b/partials/user-screen.html
@@ -1,2 +1,10 @@
-<h1>Добре дошъл {{username}}</h1>
-<div id="calendar"></div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-5">
+        <h1>Добре дошъл</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <div initialize-calendar></div>
+    </div>
+</div>
